--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "${BACKEND_PORT:-8010}:8010"
     volumes:
-      - ../sgr_deep_research:/app/sgr_deep_research:ro
+      - ../examples/sgr_deep_research:/app/examples/sgr_deep_research:ro
       - ../config.yaml:/app/config.yaml:ro
       - ../agents.yaml:/app/agents.yaml:ro
       - ../logging_config.yaml:/app/logging_config.yaml:ro
